todo-app/manifests/03-deployment-postgresql.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
  namespace: todo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
        - name: postgresql
          image: registry.redhat.io/rhel8/postgresql-16:1-1776847966
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgresql
