todo-app/manifests/04-service-postgresql.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: todo
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
  selector:
    app: postgresql
