todo-app/manifests/11-service-todo-backend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: todo-backend
  namespace: todo
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: todo-backend
