todo-app/manifests/13-service-todo-frontend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: todo-frontend
  namespace: todo
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: todo-frontend
