todo-app/manifests/09-tempo-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: tempo-query
  namespace: todo
spec:
  to:
    kind: Service
    name: todo-tempo-query-frontend
  port:
    targetPort: 3200
  tls:
    termination: edge
