todo-app/manifests/14-route-todo-frontend.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: todo-frontend
  namespace: todo
spec:
  to:
    kind: Service
    name: todo-frontend
  port:
    targetPort: http
  tls:
    termination: edge
